[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shared-context-cache-mcp-server"
version = "0.2.0"
description = "MCP server for shared context caching with trust verification — AI agents share and verify computed results"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "AiAgentKarl" }]
keywords = [
    "mcp",
    "model-context-protocol",
    "ai-agents",
    "cache",
    "shared-context",
    "agent-economy",
    "context-sharing",
    "token-optimization",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["mcp>=1.0.0", "httpx>=0.27.0"]

[project.urls]
Homepage = "https://github.com/AiAgentKarl/shared-context-cache-mcp-server"
Repository = "https://github.com/AiAgentKarl/shared-context-cache-mcp-server"

[project.scripts]
shared-context-cache-mcp-server = "src.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]
